Fix border between play button and effects when wrapped

--- a/src/components/sound-editor/sound-editor.css
+++ b/src/components/sound-editor/sound-editor.css
@@ -94,6 +94,12 @@ $border-radius: 0.25rem;
     min-width: 1.25rem;
 }
 
+.round-button-outer {
+    display: flex;
+    align-items: center;
+    height: 100%;
+}
+
 .round-button {
     height: 3rem;
     width: 3rem;
